# emailinator

./: .gitignore  AGENTS.md  Makefile  PRE_COMMIT_HOOK_README.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup-precommit.sh  tasks.db
.github/: copilot-instructions.md
.github/workflows/: deploy-supabase.yml  deploy.yml  pages.yml  pr-quick-tests.yml  quick-test.yml  test.yml
emailinator_flutter/: README.md  pubspec.yaml
emailinator_flutter/lib/: config.dart  main.dart
emailinator_flutter/linux/: CMakeLists.txt
emailinator_flutter/test/: change_password_screen_test.dart  date_offset_test.dart  filter_bar_test.dart  format_utils_test.dart  history_filter_test.dart  login_screen_validation_test.dart  routing_change_password_test.dart  setup_screen_test.dart  sign_out_confirmation_test.dart  snoozed_tasks_test.dart  submit_on_enter_test.dart  task_list_item_display_test.dart  task_sent_at_test.dart  task_state_management_test.dart  test_helpers.dart  widget_test.dart
emailinator_flutter/web/: _redirects  index.html  manifest.json  setup.html
emailinator_flutter/windows/: CMakeLists.txt
src/emailinator/: __init__.py  auth.py  batch.py  config.json  config.py  email_parser.py  main.py  openai_client.py  send_email.py  send_to_supabase.py  service.py
src/emailinator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
supabase/: .gitignore  config.toml
supabase/migrations/: 20250819000000_init.sql  20250820000000_update_preferences.sql  20250821000000_track_email_metadata.sql  20250822000000_user_openai_budget.sql  20250822000100_openai_budget_decrease_policy.sql  20250823000000_email_aliases.sql  (+25 more)
test_data/: simple_email1.eml
test_integration/: README.md  inbound_email_tests_seed.sql  seed_prep_for_inbound_email_tests.sql  test_process_emails.py
tests/: README.md  inbound_email_tests.py  inbound_email_tests_seed.sql  test_batch_task.py  test_email_parser.py  test_sanitize_emails.py  test_service.py
tools/: README.md  __init__.py  sanitize_emails.py  send_to_supabase.py  test_sanitize_emails.py
(+68 files in other folders)
