[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emailinator-tools"
version = "0.1.0"
description = "Email parser utilities and tools for Emailinator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "python-dotenv>=1.0.0",
    "pytest>=7.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "requests>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["tools"]

[tool.pytest.ini_options]
pythonpath = ["tools"]
# Exclude integration tests from regular pytest runs
testpaths = ["tools"]
# Explicitly ignore the test_integration directory
norecursedirs = ["test_integration"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
